# blc

./: CMakeLists.txt  CPPLINT.cfg  Doxyfile.in  README.md  blcConfig.cmake.in  blcConfigVersion.cmake.in  gcovr.cfg  lcov.sh  lint
.github/workflows/: cover.yml  cpplint.yml  cpptest.yml  gcovr.yml
blc/: ForkServer.hpp  SSLSocket.hpp  Server.hpp  Socket.hpp  VFile.hpp  VFiles.hpp  actor.hpp  actor.tpp  bindTest.hpp  blc.hpp  blcmain.hpp  cinReadable.hpp  client.hpp  client2way.hpp  concept.hpp  constraint.hpp  env.hpp  errorHandle.hpp  fileSize.hpp  float.hpp  global.hpp  nonCopyable.hpp  pair.hpp  pair.tpp  pipe.hpp  pipeCluster.hpp  promise.hpp  protocolCaps.hpp  protocolCaps.tpp  protocolFactory.hpp  protocolFactory.tpp  regex.hpp  serializable.hpp  server.hpp  server2way.hpp  singleServer.hpp  socket.hpp  spawn.hpp  stream.hpp  stringOp.hpp  (+2 more)
concept/: operable.hpp
coverage/: lcov.info
docs/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  _v_file_8cpp.html  _v_file_8cpp__incl.md5  _v_file_8hpp.html  _v_file_8hpp.js  _v_file_8hpp__dep__incl.map  _v_file_8hpp__dep__incl.md5  _v_file_8hpp__incl.map  _v_file_8hpp__incl.md5  _v_file_8hpp_source.html  actor_8hpp.html  actor_8hpp.js  actor_8hpp__dep__incl.map  actor_8hpp__dep__incl.md5  actor_8hpp__incl.map  actor_8hpp__incl.md5  actor_8hpp_source.html  annotated.html  annotated_dup.js  bind_test_8cpp.html  bind_test_8cpp.js  bind_test_8cpp__incl.map  bind_test_8cpp__incl.md5  bind_test_8hpp.html  bind_test_8hpp.js  bind_test_8hpp__dep__incl.map  bind_test_8hpp__dep__incl.md5  bind_test_8hpp_source.html  blc_8hpp.html  blc_8hpp__dep__incl.map  blc_8hpp__dep__incl.md5  blc_8hpp__incl.map  blc_8hpp__incl.md5  blc_8hpp_source.html  blcmain_8hpp.html  blcmain_8hpp.js  blcmain_8hpp__dep__incl.map  blcmain_8hpp__dep__incl.md5  (+1538 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_19.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+68 more)
src/: Client.cpp  ForkServer.cpp  SSLSocket.cpp  Server.cpp  Socket.cpp  VFile.cpp  VFiles.cpp  bindTest.cpp  cinReadable.cpp  client.cpp  client2way.cpp  errorHandle.cpp  fileSize.cpp  float.cpp  global.cpp  main.cpp  nonCopyable.cpp  pipe.cpp  pipeCluster.cpp  promise.cpp  regex.cpp  serializable.cpp  server.cpp  server2way.cpp  singleServer.cpp  socket.cpp  stream.cpp  stringOp.cpp
test/: VFile.cpp  bindTest.cpp  cinReadable.cpp  env.cpp  errorHandle.cpp  fileSize.cpp  float.cpp  main.cpp  pipe.cpp  pipeCluster.cpp  protocolCaps.cpp  protocolFactory.cpp  regex.cpp  serializable.cpp  server.cpp  singleServer.cpp  socket.cpp  spawn.cpp  stream.cpp  stringOp.cpp  twoWay.cpp
test/Float/: CMakeLists.txt  main.cpp
